[project]
name = "market-libs"
version = "0.0.0"
description = "Monorepo de clientes HTTP para servicios financieros argentinos."
requires-python = ">=3.12"
readme = "README.md"
# El root del workspace no se publica: es solo un contenedor.
classifiers = ["Private :: Do Not Upload"]
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
higyrus-client = { workspace = true }
wallets-client = { workspace = true }
matriz-client = { workspace = true }
iol-client = { workspace = true }
ambito-financiero-client = { workspace = true }

# Dependencias de desarrollo compartidas por todo el workspace.
# Se instalan con `uv sync` y aplican a cualquier paquete miembro.
[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "pre-commit>=4.0",
]

# ---------------------------------------------------------------------------
# Ruff: linter + formatter para todo el monorepo.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["packages/*/src", "packages/*/tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "SIM",      # flake8-simplify
    "RUF",      # ruff-specific
    "ASYNC",    # flake8-async
    "PIE",      # flake8-pie
    "PT",       # flake8-pytest-style
    "RET",      # flake8-return
    "TID",      # flake8-tidy-imports
]
ignore = [
    "E501",  # line-too-long (formatter ya se encarga)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"]  # asserts permitidos en tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy: configuración base. Cada paquete puede sobreescribir.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
explicit_package_bases = true
# El mypy global cubre el código fuente de cada paquete. Los tests se chequean
# por paquete (ej. `uv run mypy packages/iol-client/tests`) para evitar
# colisiones de módulos `conftest` entre paquetes.
files = ["packages/higyrus-client/src", "packages/wallets-client/src", "packages/matriz-client/src", "packages/iol-client/src", "packages/ambito-financiero-client/src"]

# ---------------------------------------------------------------------------
# Pytest: descubrimiento sobre todos los paquetes del workspace.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["packages"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
# importlib evita conflictos cuando hay `tests/conftest.py` en varios paquetes.
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--import-mode=importlib",
]

[tool.coverage.run]
branch = true
source = ["packages"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
